--- a/client/src/components/MainPage/MainPage.css
+++ b/client/src/components/MainPage/MainPage.css
@@ -18,11 +18,13 @@ body {
 
 .wrapper {
     display:inline-flex;
+    width: 100%;
+    height: 100vh;
 }
 
 .sidebar {
-    width: 400px;
-    height: 619px; 
+    width: 30%;
+    height: 100%; 
     z-index: 1;
     top: 0;
     left: 0;
