--- a/client/src/components/MainPage/MainPage.css
+++ b/client/src/components/MainPage/MainPage.css
@@ -1,32 +1,51 @@
-html {
-    height: 100%;
-    box-sizing: border-box;
-}
-
-body {
+html, body {
     height: 100%;
     width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.wrapper {
+    height: 100vh;
+    width: 100vw;
 }
 
 *,
 *::before,
 *::after{
-    box-sizing: inherit;
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
 .wrapper {
     display:inline-flex;
+    transition: 1s ease;
+}
+
+.popbar {
+    width: 30%;
+    height: 100%;
+    transition: 1s ease;
+    position: relative;
 }
 
 .sidebar {
-    width: 400px;
-    height: 619px; 
-    z-index: 1;
+    width: 40%;
+    height: 100%; 
     top: 0;
     left: 0;
     background-color: rgb(206, 240, 253);
+    
+    transition: 1s ease;
+}
+
+.sidebar_large {
+    width: 90%;
+}
+
+.popbar_small {
+    width: 10%;
 }
 
 .iconBar {
@@ -52,6 +71,7 @@ body {
     color: rgba(255, 255, 255, 0.331);
     text-shadow: 0 0px 0px rgb(255, 255, 255);
     transition: 0.3s;
+    cursor: pointer;
 }
 
 /* do this later */
@@ -67,7 +87,7 @@ body {
 }
 
 .search input[type=text]{
-    width: 320px;
+    width: 300px;
     height: 25px;
     border-radius: 25px;
     padding: 10px;
@@ -115,4 +135,5 @@ body {
 
 .map {
     background-color: rgb(222, 222, 222);
+    width: 100%;
 }
