--- a/client/src/components/MainPage/MainPage.css
+++ b/client/src/components/MainPage/MainPage.css
@@ -8,6 +8,9 @@ html, body {
 .wrapper {
     height: 100vh;
     width: 100vw;
+    display: flex;
+    
+    transition: 1s ease;
 }
 
 *,
@@ -16,11 +19,6 @@ html, body {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
-
-.wrapper {
-    display:inline-flex;
-    transition: 1s ease;
 }
 
 .popbar {
@@ -36,34 +34,55 @@ html, body {
     top: 0;
     left: 0;
     background-color: rgb(206, 240, 253);
-    
+
     transition: 1s ease;
+
+    padding-left: 60px;
 }
 
-.sidebar_large {
-    width: 90%;
+.collapsed .sidebar {
+    width: 0;
+    overflow: hidden;
 }
 
-.popbar_small {
-    width: 10%;
+.close {
+    background-color: skyblue;
+    color: #f2f2f2;
+    float: left;
+    padding: 5px;
+    font-size: 30px;
+    border: none;
+    cursor: pointer;
+    border-radius: 50%;
 }
 
 .iconBar {
+    width: 60px;
     background-color: skyblue;
     overflow: auto;
-    width: flex;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    position: fixed;
+    height: 100%;
 }
 
-.iconBar a {
+.icons {
+    flex-direction: column;
+    align-items: center;
+    display: flex;
+}
+
+.icons a {
     display: block;
     color: rgb(199, 190, 15);
     text-align: center;
     padding: 14px 14px;
     text-decoration: none;
     font-size: x-large;
-    float: left;
-    width: 25%;
-  
+    width: 100%;
+
     transition: 0.3s;
 }
 
@@ -87,7 +106,7 @@ html, body {
 }
 
 .search input[type=text]{
-    width: 300px;
+    width: 250px;
     height: 25px;
     border-radius: 25px;
     padding: 10px;
@@ -136,4 +155,5 @@ html, body {
 .map {
     background-color: rgb(222, 222, 222);
     width: 100%;
+    flex-grow: 1;
 }
