--- a/client/src/components/MainPage/MainPage.css
+++ b/client/src/components/MainPage/MainPage.css
@@ -38,6 +38,8 @@ html, body {
     transition: 1s ease;
 
     padding-left: 60px;
+
+    overflow-y: auto;
 }
 
 .collapsed .sidebar {
@@ -106,29 +108,38 @@ html, body {
 }
 
 .search input[type=text]{
-    width: 250px;
+    flex: 1;
+    width: 100%;
     height: 25px;
     border-radius: 25px;
     padding: 10px;
     border: none;
+    vertical-align: middle;
 }
      
 .search{
+    align-items: center;
     margin-left: 20px;
     margin-top: 10px;
     margin-right: 20px;
 }
-     
+/*      
 .search button{
     background-color: skyblue;
     color: #f2f2f2;
     float: right;
     padding: 5px;
-    margin-left: 10px;
     font-size: 12px;
     border: none;
     cursor: pointer;
     border-radius: 50%;
+    vertical-align: middle;
+} */
+
+.pageType, .person h3, .person p {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .listPeople {
@@ -141,6 +152,7 @@ html, body {
     border-radius: 10px;
     padding: 20px;
     height: 110px;
+    margin-bottom: 10px;
 }
 
 .dot {
@@ -156,4 +168,16 @@ html, body {
     background-color: rgb(222, 222, 222);
     width: 100%;
     flex-grow: 1;
+}
+
+::-webkit-scrollbar {
+    width: 20px;
+  }
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 10px skyblue;
+}
+
+::-webkit-scrollbar-thumb {
+    background: white;
 }
