--- a/client/src/components/SettingsPage/Status.css
+++ b/client/src/components/SettingsPage/Status.css
@@ -28,13 +28,13 @@
     color: white;
 }
 
-label {
+.status-option {
     padding: 2rem;
     width: 100%;
     font-size: 1.25rem;
 }
 
-label:hover {
+.status-option:hover {
     background: var(--colour-box-light);
     color: black;
     transition: all 0.5s;
