--- a/client/src/components/MainPage/MainPage.css
+++ b/client/src/components/MainPage/MainPage.css
@@ -168,7 +168,7 @@ html, body {
 
 .addButton {   
     height: 100%;
-    width: 60px;
+    width: 10%;
     background-color: #4B91D2;
     border-radius: 10%;
     float: right;
@@ -179,14 +179,17 @@ html, body {
     font-weight: 1000;
     font-size: 30px;
     color: white;
+
+    transition: 0.5s;
 }
 
 .addButton:hover{
+    transition: 0.5s;
     background-color: #5081af;
 }
 
 .personDetails {
-    margin-left: 5%;
+    margin-left: 2%;
     margin-top: 15px;
     color: #7A91A6;
     font-size: 20px;
@@ -207,15 +210,17 @@ html, body {
     color: white;
     border: transparent;
     border-radius: 5px;
-    font-size: 18px;
+    font-size: 13px;
     background-color: #4B91D2;
     margin-top: 10px;
     padding: 7% 20% 7% 20%;
     text-align: center;
 
+    transition: 0.5s;
 }
 
 .acceptRequest:hover {
+    transition: 0.5s;
     background-color: #5081af;
 }
 
@@ -223,16 +228,18 @@ html, body {
     color: white;
     border: transparent;
     border-radius: 5px;
-    font-size: 18px;
+    font-size: 13px;
     background-color: #98AFC5;
     margin-top: 10px;
-    margin-left: 30px;
+    margin-left: 10px;
     padding: 7% 20% 7% 20%;
-    width: 100%;
     text-align: center;
+    
+    transition: 0.5s;
 }
 
 .declineRequest:hover {
+    transition: 0.5s;
     background-color: red;
 }
 
