--- a/client/src/components/LandingPage/LandingPage.css
+++ b/client/src/components/LandingPage/LandingPage.css
@@ -1,5 +1,8 @@
+body {
+    overflow: hidden;
+}
 /* nav bar */
-nav {
+#nav {
     display: flex;
     justify-content: flex-end;
 
@@ -11,7 +14,7 @@ nav {
     width: 100vw;
 }
 
-nav>button {
+#nav>button {
     border: none;
     font-size: 16px;
     font-family: 'Baumans', cursive;
@@ -70,6 +73,7 @@ nav>button {
     font-size: 18px;
     font-family: 'Baumans', cursive;
 
+    margin: 30px;
     padding: 15px 60px 15px 60px;
     border-radius: 5px;
 }
@@ -100,10 +104,11 @@ nav>button {
 
     padding: 40px 60px 20px 60px;
     border-radius: 5px;
-    width: 350px;
+    width: 300px;
 
     align-items: center;
     background-color: white;
+    box-sizing: content-box;
 }
 
 .modal>h2 {
@@ -126,7 +131,10 @@ nav>button {
 
 .form-input>div {
     display: flex;
-    flex-direction: column;}
+    flex-direction: column;
+    align-self: center;
+    width: 300px;
+}
 
 .form-input>div>p {
     font-size: 16px;
@@ -135,6 +143,7 @@ nav>button {
 }
 
 .form-input>div>input {
+    flex: none;
     height: 24px;
     border: 0px;
     border-radius: 5px;
@@ -155,7 +164,7 @@ nav>button {
     background-color: #5589D9;
     border: none;
     border-radius: 5px;
-    margin: 50px 0px 30px 0px;
+    margin: 45px 0px 30px 0px;
     font-size: 18px;
     font-family: 'Baumans', cursive;
     color: white;
@@ -168,10 +177,10 @@ nav>button {
 
 .grey-out {
     z-index: 1;
-    width: 100%;
-    height: 100%;
+    width: 120%;
+    height: 120%;
 
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
 
